# cpp-webserver-eventdriven

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LChain.cbp  LICENSE  README.md  TODO  build-libressl.sh  build.sh  cert.pem  example.crt  example.key  install-dependencies.sh
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ccpp.yml  codeql-analysis.yml
Abstractions/: CMakeLists.txt
Abstractions/include/Abstractions/: ConcurrentHashMap.hpp  Directory.hpp  DynamicLibrary.hpp  File.hpp  Format.hpp  Logger.hpp  MemoryPool.hpp  ThreadPool.hpp  Timer.hpp  Types.hpp
Abstractions/src/: DynamicLibrary.cpp  DynamicLibraryImpl.hpp  File.cpp  MemoryPool.cpp  Timer.cpp
Abstractions/src/Linux/: Directory.cpp  DynamicLibrary.cpp
Abstractions/src/MacOS/: Directory.cpp  DynamicLibrary.cpp
Abstractions/src/Win/: Directory.cpp
Console/: CMakeLists.txt  cert.pem  key.pem
Console/include/Console/: EventManager.hpp  HttpServer.hpp  NetUtils.hpp  Server.hpp  SocketOptionBuilder.hpp  exports.h
Console/include/Console/Channels/: IChannel.hpp  NormalChannel.hpp  SecureChannel.hpp
Console/include/Console/Common/: File.hpp  MemoryPool.hpp
Console/include/Console/Http/: HttpHeader.hpp  HttpMethod.hpp  HttpParser.hpp  HttpProtocol.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpStatusCode.hpp
Console/include/Console/Loader/: DynamicLibrary.hpp
Console/src/: EventManager.cpp  HttpServer.cpp  NetUtils.cpp  Server.cpp  main.cpp
Console/src/Channels/: NormalChannel.cpp  SecureChannel.cpp
Console/src/Common/: File.cpp  MemoryPool.cpp
Console/src/Http/: HttpHeader.cpp  HttpParser.cpp  HttpRequest.cpp  HttpRouter.cpp
Console/src/Loader/: DynamicLibrary.cpp  DynamicLibraryImpl.hpp
Core/: CMakeLists.txt
Core/include/LChain/Core/: data_types.h
Core/proto/: message.proto
Core/src/: main.cpp
EventEngine/: CMakeLists.txt
EventEngine/include/Events/: EventHandler.hpp  EventManager.hpp
EventEngine/src/Linux/: EventHandler.cpp  EventManager.cpp
EventEngine/src/MacOS/: EventHandler.cpp  EventManager.cpp
EventEngine/src/Win/: EventHandler.cpp  EventManager.cpp
HttpServer/: CMakeLists.txt
HttpServer/include/Http/: HttpContext.hpp  HttpHeader.hpp  HttpMethod.hpp  HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  HttpStatusCode.hpp  Sugar.hpp
HttpServer/include/Http/Exceptions/: HttpException.hpp  NotFoundException.hpp
HttpServer/src/: HttpHeader.cpp  HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpRouter.cpp  HttpServer.cpp
Samples/WebClient/: CMakeLists.txt
Samples/WebClient/src/: main.cpp
Samples/WebServer/: CMakeLists.txt
Samples/WebServer/src/: main.cpp
SocketClient/: CMakeLists.txt
SocketClient/include/Socket/: Client.hpp  TlsDecorator.hpp
SocketClient/src/: Client.cpp
SocketServer/: CMakeLists.txt  Old.txt
SocketServer/include/Socket/: NetUtils.hpp  Server.hpp  SocketOptionsBuilder.hpp  Sugar.hpp
SocketServer/include/Socket/Channels/: IChannel.hpp  NormalChannel.hpp  SecureChannel.hpp
SocketServer/include/Socket/Events/: EventHandler.hpp  EventManager.hpp  MacEventManager.hpp
SocketServer/src/: NetUtils.cpp  NetUtils.hpp  Server.cpp
SocketServer/src/Channels/: NormalChannel.cpp  NormalChannel.hpp  SecureChannel.cpp  SecureChannel.hpp
SocketServer/src/Channels/Linux/: NormalChannel.cpp
SocketServer/src/Channels/Win/: NormalChannel.cpp  SecureChannel.cpp
SocketServer/src/Events/: EventManager.cpp  LinuxEventHandler.cpp  LinuxEventManager.cpp  MacEventManager.cpp
SocketServer/src/MacOS/: NetUtils.cpp
SocketServer/src/Win/: NetUtils.cpp
